--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,43 +1,55 @@
-<h1><%= @customer.last_name %>
-    <%= @customer.first_name %>さんの会員詳細</h1>
-
-<table>
- <tr>
-  <th>会員ID</th>
-  <td><%= @customer.id %></td>
- </tr>
- <tr>
-  <th>氏名</th>
-  <td>
-    <%= @customer.last_name + "　" + @customer.first_name %>
-  </td>
- </tr>
- <tr>
-  <th>フリガナ</th>
-  <td><%= @customer.last_name_kana + "　" +  @customer.first_name_kana %>
-  </td>
- </tr>
- <tr>
-  <th>郵便番号</th>
-  <td><%= @customer.postal_code %></td>
- </tr>
- <tr>
-  <th>住所</th>
-  <td><%= @customer.address %></td>
- </tr>
- <tr>
-  <th>電話番号</th>
-  <td><%= @customer.telephone_number %></td>
- </tr>
- <tr>
-  <th>メールアドレス</th>
-  <td><%= @customer.email %></td>
- </tr>
- <tr>
-  <th>会員ステータス</th>
-  <td><%= @customer.is_deleted ? '退会': '有効' %></td>
- </tr>
-</table>
- 
- <%= link_to '編集する', edit_admin_customer_path(@customer.id) %>
- <%= link_to '注文履歴一覧を見る', admin_root_path %>
+<div class="container mx-auto">
+    <div class="row">
+        <div class="col-3 offset-md-1 text-center">
+        　<div class="text-dark" style="background-color:#DDDDDD">
+        　 <%= @customer.last_name %>
+          <%= @customer.first_name %>さんの会員詳細
+        　</div>
+        </div>
+    </div>
+    
+    <div class="row">
+       <div class="col-3 offset-md-1">
+        <table class-"table">
+         <tr><th>会員ID</th></tr>
+         <tr><th>氏名</th></tr>
+         <tr><th>フリガナ</th></tr>
+         <tr><th>郵便番号</th></tr>
+         <tr><th>住所</th></tr>
+         <tr><th>電話番号</th></tr>
+         <tr><th>メールアドレス</th></tr>
+         <tr><th>会員ステータス</th></tr>
+        </table>
+       </div>
+         
+         <div class="col-7 offset-md-1">
+           <table>
+            <tr><td><%= @customer.id %></td></tr>
+            <tr><td><%= @customer.last_name + "　" + @customer.first_name %></td></tr>
+            <tr><td><%= @customer.last_name_kana + "　" +  @customer.first_name_kana %></td></tr>
+            <tr><td><%= @customer.postal_code %></td></tr>
+            <tr><td><%= @customer.address %></td></tr>
+            <tr><td><%= @customer.telephone_number %></td></tr>
+            <tr><td><%= @customer.email %></td></tr>
+            <tr>
+               <td>
+                    <% if @customer.is_deleted == true %>
+                    <p class="text-secondary"><%= '退会'%></p>
+                    <% else %>
+                    <p class="text-success"><%= '有効' %></p>
+                    <% end %>
+                </td>
+            </tr>
+           </table>
+         </div>
+     </div>
+         
+          <div class="row">
+           <div class-"col-3 offset-md-4">
+            <%= link_to '編集する', edit_admin_customer_path(@customer.id), class: "btn btn-success" %>
+           </div>
+           <div class="col-4 offset-md-1">
+            <%= link_to '注文履歴一覧を見る', admin_root_path, class: "btn btn-primary" %>
+           </div>
+         </div>
+</div>
