--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -43,8 +43,8 @@
                 </tbody>
             </table>
             
-            <div class="col-4 offset-4 text-center"
+            <div class="col-4 offset-4 text-center">
             <%= paginate @items %>
-            
+            </div>
     </div>
 </div>
