--- a/app/views/layouts/_customer_header.erb
+++ b/app/views/layouts/_customer_header.erb
@@ -1,4 +1,4 @@
-         <!--ようこそ、<%#= current_customer.last_name %>さん！-->
+         ようこそ、<%= current_customer.last_name %>さん！
          
          <li class="nav-item">
             <%= link_to "マイページ", customers_mypage_path, class:'mr-3 btn btn-outline-secondary nav-link text-darkbtn' %>
