--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,46 +1,61 @@
-<h1><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h1>
-
-<%= form_with model: @customer, url: admin_customer_path(@customer.id) do |f| %> 
+<div class="container mx-auto">
+    <div class="row">
+        <div class="col-5 offset-md-1 text-center mb-3">
+        　<div class="text-dark" style="background-color:#DDDDDD">
+        　 <%= @customer.last_name %>
+          <%= @customer.first_name %>さんの会員情報編集
+        　</div>
+        </div>
+    </div>
+    
+    <%= form_with model: @customer, url: admin_customer_path(@customer.id) do |f| %> 
+    
+    <table>
+     <tr>
+       <th>会員ID</th>
+       <td><%= @customer.id %></td>
+     </tr>
+     <tr>
+       <th>氏名</th>
+       <td>
+           <%= f.text_field :last_name %>
+           <%= f.text_field :first_name %>
+       </td>
+     </tr>
+     <tr>
+       <th>フリガナ</th>
+       <td>
+           <%= f.text_field :last_name_kana %>
+           <%= f.text_field :first_name_kana %>
+       </td>
+     </tr>
+     <tr>
+       <th>郵便番号</th>
+       <td><%= f.text_field :postal_code %></td>
+     </tr>
+     <tr>
+       <th>住所</th>
+       <td><%= f.text_field :address %></td>
+     </tr>
+     <tr>
+       <th>電話番号</th>
+       <td><%= f.text_field :telephone_number %></td>
+     </tr>
+     <tr>
+       <th>メールアドレス</th>
+       <td><%= f.text_field :email %></td>
+     </tr>
+     <tr>
+       <th>会員ステータス</th>
+       <td>
+           <%= f.radio_button :is_deleted, false %>
+           <%= f.label :is_deleted_true, "有効" %>
+           <%= f.radio_button :is_deleted, true %>
+           <%= f.label :is_deleted_false, "退会" %>
+       </td>
+     </tr>
+    </table>
  
- <table>
-  <tr>
-   <th>会員ID</th>
-   <td><%= @customer.id %></td>
-  </tr>
-  <tr>
-    <th>氏名</th>
-    <td><%= f.text_field :last_name %>
-        <%= f.text_field :first_name %></td>
-  </tr>
-  <tr>
-   <th>フリガナ</th>
-    <td><%= f.text_field :last_name_kana %>
-        <%= f.text_field :first_name_kana %></td>
-  </tr>
-  <tr>
-    <th>郵便番号</th>
-    <td><%= f.text_field :postal_code %></td>
-  </tr>
-  <tr>
-   <th>住所</th>
-   <td><%= f.text_field :address %></td>
-  </tr>
-   <tr>
-   <th>電話番号</th>
-   <td><%= f.text_field :telephone_number %></td>
-  </tr>
-  <tr>
-   <th>メールアドレス</th>
-   <td><%= f.text_field :email %></td>
-  </tr>
-  <tr>
-   <th>会員ステータス</th>
-   <td><%= f.radio_button :is_deleted, false %>
-　     <%= f.label :is_deleted_true, "有効" %>
-　     <%= f.radio_button :is_deleted, true %>
-　     <%= f.label :is_deleted_false, "退会" %></td>
-  </tr>
-</table>
- 
-  <%= f.submit '変更を保存' %>
-<% end %>
+    <%= f.submit '変更を保存', class: "btn btn-success" %>
+    <% end %>
+</div>
