--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,16 @@
-<h1>About</h1>
-<div>ながのCAKEは全国発送可能なケーキ屋さんです。<br>
-お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-様々なバリエーションをご用意しております。<br>
-また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-ぜひご注文ください</div>
+<div class="container">
+    <div class="row">
+            <div class="col-md-12 position:relative;">
+                <div class="cover-text text-center">
+                    <h1>About</h1>
+                    <p>ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+                       お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+                       様々なバリエーションをご用意しております。<br>
+                       また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+                       ぜひご注文ください
+                    </p>
+                    <%= image_tag 'present.jpg' %>
+                </div>
+            </div>
+    </div>
+</div>
