--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,63 +1,72 @@
-<h2>新規会員登録</h2>
+<div class="container text-center mx-auto">
+  <div class="row mt-3">
+  
+    <div class="col-2 offset-md-2 mb-5">
+    <div class="text-dark" style="background-color:#DDDDDD">新規会員登録</div>
+    </div>
+  </div>
+　
+　
+   <%= form_with model: @customer, url: customer_registration_path, method: :post do |f| %>
+   <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_with model: @customer, url: customer_registration_path, method: :post do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label "名前" %>
-    <%= f.label "(姓)" %>
-    <%= f.text_field :last_name %>
-    <%= f.label "(名)"%>
-    <%= f.text_field :first_name %>
+  <div class="field row mb-3">
+    <%= f.label "名前",  class:"col-md-3" %>
+    <%= f.label "(姓)", class:"col-md-1" %>
+    <%= f.text_field :last_name, class:"col-md-2", placeholder:"令和" %>
+    <%= f.label "(名)", class:"col-md-1"%>
+    <%= f.text_field :first_name, class:"col-md-2", placeholder:"道子" %>
   </div>
   
-  <div>
-    <%= f.label "フリガナ" %>
-    <%= f.label "(セイ)" %>
-    <%= f.text_field :last_name_kana %>
-    <%= f.label "(メイ)" %>
-    <%= f.text_field :first_name_kana %>
+  <div class="field row mb-3">
+    <%= f.label "フリガナ", class:"col-md-3" %>
+    <%= f.label "(セイ)", class:"col-md-1" %>
+    <%= f.text_field :last_name_kana, class:"col-md-2", placeholder:"レイワ" %>
+    <%= f.label "(メイ)", class:"col-md-1" %>
+    <%= f.text_field :first_name_kana, class:"col-md-2", placeholder:"ミチコ" %>
   </div>
 
-  <div class="field">
-    <%= f.label "メールアドレス" %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="field row mb-3">
+    <%= f.label "メールアドレス", class:"col-md-3" %>
+    <%= f.email_field :email, class:"col-md-3 offset-md-1", placeholder:"sample@example.com", autofocus: true, autocomplete: "email" %>
   </div>
   
-  <div>
-    <%= f.label "郵便番号(ハイフンなし)" %>
-    <%= f.text_field :postal_code %>
+  <div class="field row mb-3">
+    <%= f.label "郵便番号(ハイフンなし)", class:"col-md-3" %>
+    <%= f.text_field :postal_code, class:"col-md-3 offset-md-1", placeholder:"00000000" %>
   </div>
   
-  <div>
-    <%= f.label "住所" %>
-    <%= f.text_field :address %>
+  <div class="field row mb-3">
+    <%= f.label "住所", class:"col-md-3" %>
+    <%= f.text_field :address, class:"col-md-5 offset-md-1", placeholder:"東京都渋谷区代々木神園町0-0" %>
   </div>
   
-  <div>
-    <%= f.label "電話番号（ハイフンなし)" %>
-    <%= f.text_field :telephone_number %>
+  <div class="field row mb-3">
+    <%= f.label "電話番号（ハイフンなし)", class:"col-md-3" %>
+    <%= f.text_field :telephone_number, class:"col-md-3 offset-md-1", placeholder:"00000000000" %>
   </div>
 
-  <div class="field">
-    <%= f.label "パスワード(6文字以上）" %>
-    <!--<= if @minimum_password_length %>-->
-    <!--<em>(<= @minimum_password_length %> characters minimum)</em>-->
-    <!--< end %>-->
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="field row mb-3">
+    <%= f.label "パスワード(6文字以上）", class:"col-md-3" %>
+    <%= f.password_field :password, class:"col-md-3 offset-1", autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
-    <%= f.label "パスワード（確認用）" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="field row mb-3">
+    <%= f.label "パスワード（確認用）", class:"col-md-3" %>
+    <%= f.password_field :password_confirmation, class:"col-md-3 offset-1", autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "新規登録" %>
+  <div class="actions row mb-3">
+    <%= f.submit "新規登録", class:"col-md-3 offset-4 btn btn-success" %>
   </div>
 <% end %>
 
-<div>既に登録済みのかた</div>
+<div class="row">
+    <div class="col-md-3 offset-md-3 mb-3" style="background-color:#DDDDDD">
+      既に登録済みのかた
+    </div>
+</div>
+
 <%=link_to "こちら", customer_session_path %>
 からログインしてください。
 
