--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
             <div class="col-md-12 cover-image position:relative;">
-                <div class="cover-text text-center">
-                　　<%= image_tag 'top.jpg' %>
+                <div class="cover-text text-center top_image" style="background-image: url(<%= asset_path 'top.jpg'%>); width: 400px; height: 300px;">
+                　　<%#= image_tag 'top.jpg' %>
                     <p><strong>ようこそ、ながのCAKEへ！<br>
                                             このサイトは、ケーキ販売のECサイトになります。<br>
                                             会員でない方も商品の閲覧はできますが、<br>
