--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,63 +1,80 @@
-<h1>注文履歴詳細</h1>
+<div class="container text-center mx-auto">
+  <div class="row mt-3">
+  
+    <div class="col-2 offset-md-2 mb-5">
+    <div class="text-dark" style="background-color:#DDDDDD">注文履歴詳細</div>
+    </div>
+  </div>
+  
+  <div class="row">
+   <div class="col-md-4 offset-1">
+       <p><strong>注文情報</strong></p>
+       <table border="1" class="table">
+           <tr>
+               <th class="th" style="background-color:#DDDDDD">注文日</th>
+               <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+           </tr>
+           <tr>
+               <th class="th" style="background-color:#DDDDDD">配送先</th>
+               <td>
+                   <%= "〒" + @order.shipping_postal_code.slice(0..2) + "-" + @order.shipping_postal_code.slice(3..6) %><br>
+                   <%= @order.shipping_address %><br>
+                   <%= @order.shipping_name %>
+               </td>
+           </tr>
+           <tr>
+               <th class="th" style="background-color:#DDDDDD">支払方法</th>
+               <td><%= @order.payment_i18n %></td>
+           </tr>
+           <tr>
+               <th class="th" style="background-color:#DDDDDD">ステータス</th>
+               <td><%= @order.status_i18n %></td>
+           </tr>
+        </table>
+    </div>
 
-<div>注文情報</div>
-
-<table>
-    <tr>
-        <th>注文日</th>
-        <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
-    </tr>
-    <tr>
-        <th>配送先</th>
-        <td>
-            <%= "〒" + @order.shipping_postal_code.slice(0..2) + "-" + @order.shipping_postal_code.slice(3..6) %><br>
-            <%= @order.shipping_address %><br>
-            <%= @order.shipping_name %>
-        </td>
-    </tr>
-    <tr>
-        <th>支払方法</th>
-        <td><%= @order.payment_i18n %></td>
-    </tr>
-    <tr>
-        <th>ステータス</th>
-        <td><%= @order.status_i18n %></td>
-    </tr>
-</table>
-
-<div>請求情報</div>
-
-<table>
-    <tr>
-        <th>商品合計</th>
-        <td><%= @order.total_payment %></td>
-    </tr>
-    <tr>
-        <th>配送料</th>
-        <td><%= @order.shipping_cost %></td>
-    </tr>
-    <tr>
-        <th>ご請求額</th>
-        <td><%= @order.total_payment + @order.shipping_cost %></td>
-    </tr>
-</table>
-
-<div>注文内容</div>
-
-<table>
-    <tr>
-        <th>商品名</th>
-        <th>単価（税込）</th>
-        <th>個数</th>
-        <th>小計</th>
-    </tr>
-    
-    <% @order.order_details.each do |order_detail| %>
-    <tr>
-        <td><%= order_detail.item.name %></td>
-        <td><%= order_detail.item.with_tax_price %></td>
-        <td><%= order_detail.amount %></td>
-        <td><%= order_detail.total_price %></td>
-    </tr>
-    <% end %>
-</table>
+   <div class="col-md-4">
+       <p><strong>請求情報</strong></p>
+       <table border="1" class="table">
+           <tr>
+               <th class="th" style="background-color:#DDDDDD">商品合計</th>
+               <td><%= @order.total_payment %></td>
+           </tr>
+           <tr>
+               <th class="th" style="background-color:#DDDDDD">配送料</th>
+               <td><%= @order.shipping_cost %></td>
+           </tr>
+           <tr>
+               <th class="th" style="background-color:#DDDDDD">ご請求額</th>
+               <td><%= @order.total_payment + @order.shipping_cost %></td>
+           </tr>
+       </table>
+    </div>
+  </div>
+  
+  <div class="row">
+      <div class="col-md-7 offset-md-1">
+          <p><strong>注文内容</strong></p>
+          <table border="1" class="table">
+              <thead class="thead" style="background-color:#DDDDDD">
+                  <tr>
+                      <th>商品名</th>
+                      <th>単価（税込）</th>
+                      <th>個数</th>
+                      <th>小計</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <% @order.order_details.each do |order_detail| %>
+                  <tr>
+                      <td><%= order_detail.item.name %></td>
+                      <td><%= order_detail.item.with_tax_price %></td>
+                      <td><%= order_detail.amount %></td>
+                      <td><%= order_detail.total_price %></td>
+                  </tr>
+                 <% end %>
+              </tbody>
+           </table>
+        </div>
+    </div>
+</div>
