--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,14 +1,21 @@
-<%= form_with model: @customer, url: customers_withdrawal_path, method: :patch do |f| %>
-
-<h1>本当に退会しますか？</h1>
-
-<div>
-    退会すると、会員登録情報や<br>
-    これまでの購入履歴が閲覧できなくなります。<br>
-    退会する場合は、「退会する」をクリックしてください。
+<div class="container">
+    <div class="row">
+            <div class="col-md-12 position:relative;">
+                <div class="cover-text text-center">
+                    <h5><strong>本当に退会しますか？</strong></h5>
+                    
+                    <%= form_with model: @customer, url: customers_withdrawal_path, method: :patch do |f| %>
+                    
+                    <p>
+                        退会すると、会員登録情報や<br>
+                        これまでの購入履歴が閲覧できなくなります。<br>
+                        退会する場合は、「退会する」をクリックしてください。<br>
+                    </p>
+                    
+                    <%= link_to "退会しない", customers_mypage_path, class: "btn btn-primary" %>
+                    <%= f.submit "退会する", class: "btn btn-danger" %>
+                    <% end %>
+                </div>
+            </div>
+    </div>
 </div>
-
-<%= link_to "退会しない", customers_mypage_path %>
-<%= f.submit "退会する" %>
-
-<% end %>
