--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -6,11 +6,11 @@
         </div>
         <div class-"col-md-4 offset-md-1">
          <h4><strong><%= @item.name %></strong></h4><br>
-         <%= @item.introduction %><br>
-         <strong>¥<%= @item.price %>(税込)</strong><br>
+         <div><%= @item.introduction %></div><br>
+         <h5><strong>¥<%= @item.price %>(税込)</strong></h5><br>
          <%= f.select :amount, *[1..10] %>
          <%= f.hidden_field :item_id, :value => @item.id %>
-         <%= f.submit "カートに入れる" %>
+         <%= f.submit "カートに入れる", class: "btn btn-success" %>
          <% end %>
         </div>
 <!--< end %>-->
