--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,35 +1,45 @@
-<h1>注文履歴一覧</h1>
-
-<table>
-    <thead>
-        <tr>
-            <th>注文日</th>
-            <th>配送先</th>
-            <th>注文商品</th>
-            <th>支払金額</th>
-            <th>ステータス</th>
-            <th>注文詳細</th>
-        </tr>
-    </thead>
-    <tbody>
-    <% @orders.each do |order| %>
-    
-        <tr>
-            <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
-            <td>
-                <%= "〒" + order.shipping_postal_code %><br>
-                <%= order.shipping_address %><br>
-                <%= order.shipping_name %>
-            </td>
-            <td>
-                <% order.order_details.each do |order_detail| %>
-                <%= order_detail.item.name %>
-                <% end %>
-            </td>
-            <td><%= order.total_payment + order.shipping_cost %></td>
-            <td><%= order.status_i18n %></td>
-            <td><%= link_to "表示する", order_path(order.id) %></td>
-        </tr>
-    <% end %>
-    </tbody>
-</table>
+<div class="container text-center mx-auto">
+  <div class="row mt-3">
+  
+    <div class="col-2 offset-md-2 mb-5">
+    <div class="text-dark" style="background-color:#DDDDDD">注文履歴一覧</div>
+    </div>
+  </div>
+  
+  <div class="row">
+      <div class="col-md-10 offset-1">
+          <table border="1" class="table">
+              <thead class="thead" style="background-color:#DDDDDD">
+                  <tr>
+                      <th>注文日</th>
+                      <th>配送先</th>
+                      <th>注文商品</th>
+                      <th>支払金額</th>
+                      <th>ステータス</th>
+                      <th>注文詳細</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <% @orders.each do |order| %>
+                  <tr>
+                      <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+                      <td>
+                          <%= "〒" + order.shipping_postal_code %><br>
+                          <%= order.shipping_address %><br>
+                          <%= order.shipping_name %>
+                      </td>
+                      <td>
+                          <% order.order_details.each do |order_detail| %>
+                          <%= order_detail.item.name %>
+                          <% end %>
+                      </td>
+                      <td><%= order.total_payment + order.shipping_cost %></td>
+                      <td><%= order.status_i18n %></td>
+                      <td><%= link_to "表示する", order_path(order.id), class: "btn btn-primary" %></td>
+                   </tr>
+                   <% end %>
+               </tbody>
+            </table>
+        </div>
+    </div>
+</div>
