--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
      <div class="col-2">
-      <%= form_with model: @genre, url: "/admin/genres" do |f| %>
+      <%= form_with model: @genre, url: admin_genres_path do |f| %>
       <th>ジャンル名</th>
      </div>
      <div class="col-3">
